--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <textarea name="" id="textEncriptar" placeholder="Ingrese el texto aqui"></textarea>
             <div class="but">
                 <div class="mensaje">
-                    <img src="image 1 (1).png" alt="">
+                    <img src="image 1 (1).png" alt="imagen-precaucion">
                     <p>Solo letras minúsculas y sin acentos</p>
                 </div>
                <div class="botones">
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="div__mensaje">
-            <img src="Muñeco.png" alt="">
+            <img src="https://res.cloudinary.com/dvij9robe/image/upload/v1720212194/Mun%CC%83eco_dippfi.png" alt="imagen-persona">
                 <h3>Ningún mensaje fue encontrado</h3>
                 <p>Ingresa el texto que desees encriptar o desencriptar.</p>
         </div>
